--- a/package.json
+++ b/package.json
@@ -86,6 +86,8 @@
   },
   "dependencies": {
     "@clerk/shared": "^2.2.2",
-    "@clerk/types": "^4.6.0"
+    "@clerk/types": "^4.6.0",
+    "@nanostores/solid": "^0.4.2",
+    "nanostores": "^0.10.3"
   }
 }
