chore: Prepare package for release

--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "contributors": [],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/{{me}}/{{name_of_lib}}.git"
+    "url": "git+https://github.com/panteliselef/clerk-solid.git"
   },
-  "homepage": "https://github.com/{{me}}/{{name_of_lib}}#readme",
+  "homepage": "https://github.com/panteliselef/clerk-solid",
   "bugs": {
-    "url": "https://github.com/{{me}}/{{name_of_lib}}/issues"
+    "url": "https://github.com/panteliselef/clerk-solid/issues"
   },
   "files": [
     "dist"
@@ -22,18 +22,8 @@
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "browser": {},
   "exports": {
-    "solid": {
-      "development": "./dist/dev.jsx",
-      "import": "./dist/index.jsx"
-    },
-    "development": {
-      "import": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/dev.js"
-      }
-    },
+    "solid": "./dist/index.jsx",
     "import": {
       "types": "./dist/index.d.ts",
       "default": "./dist/index.js"
@@ -42,7 +32,7 @@
   "typesVersions": {},
   "scripts": {
     "dev": "vite serve dev",
-    "build": "tsup",
+    "build": "tsup --onSuccess \"pnpm lint:types\"",
     "test": "concurrently pnpm:test:*",
     "test:client": "vitest",
     "test:ssr": "pnpm run test:client --mode ssr",
@@ -79,7 +69,10 @@
     "vitest": "^1.6.0"
   },
   "keywords": [
-    "solid"
+    "solid",
+    "auth",
+    "authentication",
+    "clerk"
   ],
   "packageManager": "pnpm@9.1.1",
   "engines": {
@@ -91,5 +84,6 @@
     "@clerk/types": "^4.6.0",
     "@nanostores/solid": "^0.4.2",
     "nanostores": "^0.10.3"
-  }
+  },
+  "browser": {}
 }
