fix: Add permissions to publish workflow

--- a/package.json
+++ b/package.json
@@ -90,5 +90,8 @@
     "@nanostores/solid": "^0.4.2",
     "nanostores": "^0.10.3"
   },
-  "browser": {}
+  "browser": {},
+  "publishConfig": {
+    "access": "public"
+  }
 }
